AM_CFLAGS = --pedantic -Wall -std=gnu99 -lpthread
AM_LDFLAGS = -lpthread

bin_PROGRAMS = netstack
netstack_SOURCES = \
arp.c \
cli.c \
dst.c \
icmpv4.c \
inet.c \
ip_input.c \
ip_output.c \
ipc.c \
main.c \
netdev.c \
route.c \
skbuff.c \
sock.c \
socket.c \
tcp.c \
tcp_data.c \
tcp_input.c \
tcp_output.c \
timer.c \
tuntap_if.c \
utils.c

#netstack_HEADERS = \
arp.h \
basic.h \
cli.h \
dst.h \
ethernet.h \
icmpv4.h \
inet.h \
ip.h \
ipc.h \
list.h \
netdev.h \
route.h \
skbuff.h \
sock.h \
socket.h \
syshead.h \
tcp.h \
tcp_data.h \
timer.h \
tuntap_if.h \
utils.h \
wait.h

